# compute-blur-experiments

./: Cargo.toml  fft.wgsl  shaders.wgsl
gpu/: Cargo.toml
gpu/examples/common/: Cargo.toml  example.rs
gpu/examples/metal/: Cargo.toml  shaders.metal
gpu/examples/metal/src/: main.rs
gpu/examples/wgpu/: Cargo.toml  shaders.wgsl
gpu/examples/wgpu/src/: main.rs
gpu/src/: backend.rs  command.rs  lib.rs  pipeline.rs  resource.rs  sync.rs
gpu/src/backend/: metal.rs  wgpu.rs
src/: engine.rs  main.rs
