[package]
name = "blur-experiments"
authors = ["Arman Uguray <arman.uguray@gmail.com>"]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.68"
bytemuck = { version = "1.13.1", features = ["derive"] }
env_logger = "0.9.0"
gpu = { path = "./gpu", features = ["wgpu"] }
instant = "0.1.12"
pollster = "0.3"
winit = "0.28.6"
wgpu = "0.17"
image = "0.24.7"
