[package]
name = "common"
version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
path = "example.rs"

[dependencies]
bytemuck = { workspace = true }
gpu = { workspace = true }
instant = "0.1.12"
peniko = { git = "https://github.com/linebender/peniko", rev = "cafdac9a211a0fb2fec5656bd663d1ac770bcc81" }
