[package]
name = "gpu-metal-example"
version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
anyhow = { workspace = true }
cocoa = "0.25.0"
common = { path = "../common" }
core-graphics-types = "0.1.1"
gpu = { workspace = true, features = ["metal"] }
mtl = { workspace = true }
objc = "0.2.7"
pollster = { workspace = true }
winit = { workspace = true }
